--- a/nti.html
+++ b/nti.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+
    <header>
       <script src="script.js"></script>
       <div class="topnav" id="myTopnav">
@@ -57,7 +58,7 @@
             <a href="#nti">Повестка</a>
             <a href="#nti2">Как есть сейчас</a>
             <a href="#nti3">Как планиурется</a>
-            <a href="#nti4">Эффекты</a>
+            <a href="#nti4$">Эффекты</a>
          </div>
 
          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
@@ -130,6 +131,17 @@
 
    </section>
 
+   <footer>
+      <p> ФИО: АЛЕКСЕЕВ ДАНИИЛ ВЛАДИСЛАВОВИЧ <br>
+         ГРУППА: 191-322<br>
+         Дата выполнения: 01.06.2020
+
+
+      </p>
+
+   </footer>
+
 </body>
+
 
 </html>
