--- a/university35.html
+++ b/university35.html
@@ -111,6 +111,16 @@
 
 
    </section>
+   <footer>
+      <p> ФИО: АЛЕКСЕЕВ ДАНИИЛ ВЛАДИСЛАВОВИЧ <br>
+         ГРУППА: 191-322<br>
+         Дата выполнения: 01.06.2020
+
+
+      </p>
+
+   </footer>
 </body>
+
 
 </html>
