--- a/index.html
+++ b/index.html
@@ -27,225 +27,228 @@
 </head>
 
 <body>
+    <main>
 
 
-    <header>
-        <script src="script.js"></script>
-        <div class="topnav" id="myTopnav">
+        <header>
+            <script src="script.js"></script>
+            <div class="topnav" id="myTopnav">
 
-            <a href="#home" class="active">ТОЧКА КИПЕНИЯ</a>
-            <a href="#news">Мы сегодня</a>
-            <a href="#contact">Мы в будущем</a>
-            <a href="#contact">Эффекты</a>
-            <a href="#contact">Контакты</a>
+                <a href="#home" class="active">ТОЧКА КИПЕНИЯ</a>
+                <a href="#news">Мы сегодня</a>
+                <a href="#contact">Мы в будущем</a>
+                <a href="#contact">Эффекты</a>
+                <a href="#contact">Контакты</a>
 
-            <div>
-                <button class="btn btn-secondary  dropdown-toggle header__dropdown" type="button" id="dropdownMenu2"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Направления
-                </button>
-                <div class="dropdown-menu header__dropdown_menu" aria-labelledby="dropdownMenu2">
-                    <a href="nti.html">Движение НТИ</a>
-                    <button class="dropdown-item" type="button">Сквозные технологии</button>
-                    <button class="dropdown-item" type="button">Кружковое движение</button>
-                    <a href="university35.html">Университет 2035</a>
-                    <button class="dropdown-item" type="button">Точка роста</button>
-                    <button class="dropdown-item" type="button">Наставничество</button>
-                    <button class="dropdown-item" type="button">Кадры в ЦЭ</button>
+                <div>
+                    <button class="btn btn-secondary  dropdown-toggle header__dropdown" type="button" id="dropdownMenu2"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Направления
+                    </button>
+                    <div class="dropdown-menu header__dropdown_menu" aria-labelledby="dropdownMenu2">
+                        <a href="nti.html">Движение НТИ</a>
+                        <button class="dropdown-item" type="button">Сквозные технологии</button>
+                        <button class="dropdown-item" type="button">Кружковое движение</button>
+                        <a href="university35.html">Университет 2035</a>
+                        <button class="dropdown-item" type="button">Точка роста</button>
+                        <button class="dropdown-item" type="button">Наставничество</button>
+                        <button class="dropdown-item" type="button">Кадры в ЦЭ</button>
+                    </div>
                 </div>
+
+
+
+
+
+
+
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </div>
+        </header>
+
+        <section id="welcome">
+
+            <div class="welcome__title">
+                <h1> РАБОТА УНИВЕРСИТЕТСКОЙ <br>"ТОЧКИ КИПЕНИЯ"</h1>
+                <h2>ОТ ЗАПУСКА К ДЕЯТЕЛЬНОСТИ</h2>
             </div>
 
 
 
-
-
-
-
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <i class="fa fa-bars"></i>
-            </a>
-        </div>
-    </header>
-
-    <section id="welcome">
-
-        <div class="welcome__title">
-            <h1> РАБОТА УНИВЕРСИТЕТСКОЙ <br>"ТОЧКИ КИПЕНИЯ"</h1>
-            <h2>ОТ ЗАПУСКА К ДЕЯТЕЛЬНОСТИ</h2>
-        </div>
-
-
-
-        <div class="modal fade" id="darkModalForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog form-dark" role="document">
-                <!--Content-->
-                <div class="modal-content card card-image" style="background-color: black;">
-                    <div class="text-white rgba-stylish-strong py-5 px-5 z-depth-4">
-                        <!--Header-->
-                        <div class="modal-header text-center pb-4">
-                            <h3 class="modal-title w-100 white-text font-weight-bold" id="myModalLabel">
-                                <strong>ЗАЯВКА</strong> <a class="green-text font-weight-bold"></a>
-                            </h3>
-                            <button type="button" class="close white-text" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <!--Body-->
-                        <div class="modal-body">
+            <div class="modal fade" id="darkModalForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog form-dark" role="document">
+                    <!--Content-->
+                    <div class="modal-content card card-image" style="background-color: black;">
+                        <div class="text-white rgba-stylish-strong py-5 px-5 z-depth-4">
+                            <!--Header-->
+                            <div class="modal-header text-center pb-4">
+                                <h3 class="modal-title w-100 white-text font-weight-bold" id="myModalLabel">
+                                    <strong>ЗАЯВКА</strong> <a class="green-text font-weight-bold"></a>
+                                </h3>
+                                <button type="button" class="close white-text" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
                             <!--Body-->
-                            <div class="md-form mb-5">
-                                <input type="email" id="Form-email5" class="form-control validate white-text">
-                                <label data-error="wrong" data-success="right" for="Form-email5">ВАША ПОЧТА</label>
-                            </div>
-
-                            <div class="md-form pb-3">
-                                <input type="password" id="Form-pass5" class="form-control validate white-text">
-                                <label data-error="wrong" data-success="right" for="Form-pass5">ВАШЕ ИМЯ</label>
-                                <div class="form-group mt-4">
-                                    <input class="form-check-input" type="checkbox" id="checkbox624">
-                                    <label for="checkbox624" class="white-text form-check-label">Получать уведолмения<a
-                                            href="#" class="green-text font-weight-bold">
-                                            принять соглашение</a></label>
+                            <div class="modal-body">
+                                <!--Body-->
+                                <div class="md-form mb-5">
+                                    <input type="email" id="Form-email5" class="form-control validate white-text">
+                                    <label data-error="wrong" data-success="right" for="Form-email5">ВАША ПОЧТА</label>
                                 </div>
-                            </div>
 
-                            <!--Grid row-->
-                            <div class="row d-flex align-items-center mb-4">
-
-                                <!--Grid column-->
-                                <div class="text-center mb-3 col-md-12">
-                                    <button type="button"
-                                        class="btn btn-success btn-block btn-rounded z-depth-1">ПРИНЯТЬ УЧАСТИЕ</button>
+                                <div class="md-form pb-3">
+                                    <input type="password" id="Form-pass5" class="form-control validate white-text">
+                                    <label data-error="wrong" data-success="right" for="Form-pass5">ВАШЕ ИМЯ</label>
+                                    <div class="form-group mt-4">
+                                        <input class="form-check-input" type="checkbox" id="checkbox624">
+                                        <label for="checkbox624" class="white-text form-check-label">Получать
+                                            уведолмения<a href="#" class="green-text font-weight-bold">
+                                                принять соглашение</a></label>
+                                    </div>
                                 </div>
-                                <!--Grid column-->
 
-                            </div>
-                            <!--Grid row-->
+                                <!--Grid row-->
+                                <div class="row d-flex align-items-center mb-4">
 
-                            <!--Grid row-->
-                            <div class="row">
+                                    <!--Grid column-->
+                                    <div class="text-center mb-3 col-md-12">
+                                        <button type="button"
+                                            class="btn btn-success btn-block btn-rounded z-depth-1">ПРИНЯТЬ
+                                            УЧАСТИЕ</button>
+                                    </div>
+                                    <!--Grid column-->
 
-                                <!--Grid column-->
-                                <div class="col-md-12">
-                                    <p class="font-small white-text d-flex justify-content-end"> <a href="#"
-                                            class="green-text ml-1 font-weight-bold">
-                                        </a></p>
                                 </div>
-                                <!--Grid column-->
+                                <!--Grid row-->
+
+                                <!--Grid row-->
+                                <div class="row">
+
+                                    <!--Grid column-->
+                                    <div class="col-md-12">
+                                        <p class="font-small white-text d-flex justify-content-end"> <a href="#"
+                                                class="green-text ml-1 font-weight-bold">
+                                            </a></p>
+                                    </div>
+                                    <!--Grid column-->
+
+                                </div>
+                                <!--Grid row-->
 
                             </div>
-                            <!--Grid row-->
+                        </div>
+                    </div>
+                    <!--/.Content-->
+                </div>
+            </div>
+            <!-- Modal -->
+
+            <div class="text-center">
+                <a href="" class="btn btn-info btn-rounded" data-toggle="modal" data-target="#darkModalForm">Принять
+                    участие в "Точке Кипения"</a>
+            </div>
+
+        </section>
+
+        <section id="mission">
+            <div class="items">
+                <h1>Наша миссия</h1>
+                <p>100% студентов, преподавателей, <br> администрации вовлечены в повестку
+                    <br> стратегического развития
+                    университета</p>
+            </div>
+
+
+        </section>
+
+        <section id="aims">
+            <div class="items2">
+
+                <h1>Наши Цели и Задачи </h1>
+            </div>
+
+            <div class="card bg-dark mb-3 " style="max-width: 540px;">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="img/card1.jpg" class=" card-img" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Цели</h5>
+                            <p class="card-text">Тестирование способов достижения стратегических задач университета,
+                                в том числе поиск новых: быстро, удобно, комплексно.</p>
 
                         </div>
                     </div>
                 </div>
-                <!--/.Content-->
             </div>
-        </div>
-        <!-- Modal -->
 
-        <div class="text-center">
-            <a href="" class="btn btn-info btn-rounded" data-toggle="modal" data-target="#darkModalForm">Принять
-                участие в "Точке Кипения"</a>
-        </div>
-
-    </section>
-
-    <section id="mission">
-        <div class="items">
-            <h1>Наша миссия</h1>
-            <p>100% студентов, преподавателей, <br> администрации вовлечены в повестку
-                <br> стратегического развития
-                университета</p>
-        </div>
-
-
-    </section>
-
-    <section id="aims">
-        <div class="items2">
-
-            <h1>Наши Цели и Задачи </h1>
-        </div>
-
-        <div class="card bg-dark mb-3 " style="max-width: 540px;">
-            <div class="row no-gutters">
-                <div class="col-md-4">
-                    <img src="img/card1.jpg" class=" card-img" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Цели</h5>
-                        <p class="card-text">Тестирование способов достижения стратегических задач университета,
-                            в том числе поиск новых: быстро, удобно, комплексно.</p>
-
+            <div class="card bg-dark mb-3" style="max-width: 540px;">
+                <div class="row no-gutters">
+                    <div class="col-md-4">
+                        <img src="img/card2.jpg" class="card-img" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Задачи</h5>
+                            <p class="card-text">Связать 9 стратегических целей и 20 стратегических проектов с бизнес-
+                                интересами внешних и внутренних сообществ университета, внешняя (относительно
+                                разработчиков)
+                                обратная связь по проектам
+                                Стратегическая цель – формирование культуры ответственности за выбор
+                                личной образовательной и карьерной траектории</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="card bg-dark mb-3" style="max-width: 540px;">
-            <div class="row no-gutters">
-                <div class="col-md-4">
-                    <img src="img/card2.jpg" class="card-img" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Задачи</h5>
-                        <p class="card-text">Связать 9 стратегических целей и 20 стратегических проектов с бизнес-
-                            интересами внешних и внутренних сообществ университета, внешняя (относительно разработчиков)
-                            обратная связь по проектам
-                            Стратегическая цель – формирование культуры ответственности за выбор
-                            личной образовательной и карьерной траектории</p>
-                    </div>
-                </div>
+
+
+        </section>
+
+        <section id="role">
+
+            <div class="role1">
+                <h1>Возможности для сотрудников</h1>
+
+                <ul>
+                    <li>Экспертность – подтверждение или приобретение статуса эксперта, вовлечение сотрудников в новые
+                        экспертные области, направления</li>
+                    <li>Привлечение партнеров – статус университета с ТК подтверждает включение в экосистему АСИ и НТИ,
+                        новые партнеры, усиление связей с партнерами</li>
+                    <li>Новые проекты – идеи и запросы внешних партнеров, а также инициативные проекты от студентов и
+                        сотрудников</li>
+
+                </ul>
+
             </div>
-        </div>
+
+            <div class="pic_svg">
+                <img class="animated1" src="img/pic.svg" alt="">
+            </div>
+
+            <div class="role2">
+                <h1>Возможности для университета</h1>
+
+                <ul>
+                    <li>Возможность участия в конкурсах по линии Цифровой экономики</li>
+                    <li>Сетевые мероприятия сети Точек Кипения (PR, привлечение экспертов, проектов)</li>
+                    <li>Инфраструктура Точек Кипения – онлайн инструменты работы с сообществами, студентами,
+                        преподавателями, быстрые коммуникации и прочее</li>
+                    <li>Транслирование опыта – сотрудничество с другими университетами по передаче опыта</li>
+                    <li>Представление университета в повестке РФ</li>
+
+                </ul>
+
+            </div>
 
 
-
-    </section>
-
-    <section id="role">
-
-        <div class="role1">
-            <h1>Возможности для сотрудников</h1>
-
-            <ul>
-                <li>Экспертность – подтверждение или приобретение статуса эксперта, вовлечение сотрудников в новые
-                    экспертные области, направления</li>
-                <li>Привлечение партнеров – статус университета с ТК подтверждает включение в экосистему АСИ и НТИ,
-                    новые партнеры, усиление связей с партнерами</li>
-                <li>Новые проекты – идеи и запросы внешних партнеров, а также инициативные проекты от студентов и
-                    сотрудников</li>
-
-            </ul>
-
-        </div>
-
-        <div class="pic_svg">
-            <img class="animated1" src="img/pic.svg" alt="">
-        </div>
-
-        <div class="role2">
-            <h1>Возможности для университета</h1>
-
-            <ul>
-                <li>Возможность участия в конкурсах по линии Цифровой экономики</li>
-                <li>Сетевые мероприятия сети Точек Кипения (PR, привлечение экспертов, проектов)</li>
-                <li>Инфраструктура Точек Кипения – онлайн инструменты работы с сообществами, студентами,
-                    преподавателями, быстрые коммуникации и прочее</li>
-                <li>Транслирование опыта – сотрудничество с другими университетами по передаче опыта</li>
-                <li>Представление университета в повестке РФ</li>
-
-            </ul>
-
-        </div>
-
-
-    </section>
-
+        </section>
+    </main>
     <footer>
         <p> ФИО: АЛЕКСЕЕВ ДАНИИЛ ВЛАДИСЛАВОВИЧ <br>
             ГРУППА: 191-322<br>
