--- a/index.html
+++ b/index.html
@@ -243,104 +243,48 @@
                 </div>
             </a>
         </div>
-        <!-- https://images.unsplash.com/photo-1520839090488-4a6c211e2f94?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=38951b8650067840307cba514b554ba5&auto=format&fit=crop&w=1350&q=80 -->
+
+    </div>
+</section>
+
+<section id="role">
+
+    <div class="role1">
+        <h1>Возможности для сотрудников</h1>
+
+        <ul>
+            <li>Экспертность – подтверждение или приобретение статуса эксперта, вовлечение сотрудников в новые
+                экспертные области, направления</li>
+            <li>Привлечение партнеров – статус университета с ТК подтверждает включение в экосистему АСИ и НТИ,
+                новые партнеры, усиление связей с партнерами</li>
+            <li>Новые проекты – идеи и запросы внешних партнеров, а также инициативные проекты от студентов и
+                сотрудников</li>
+
+        </ul>
+
+    </div>
+
+    <div class="pic_svg">
+        <img class="animated1" src="img/pic.svg" alt="">
+    </div>
+
+    <div class="role2">
+        <h1>Возможности для университета</h1>
+
+        <ul>
+            <li>Возможность участия в конкурсах по линии Цифровой экономики</li>
+            <li>Сетевые мероприятия сети Точек Кипения (PR, привлечение экспертов, проектов)</li>
+            <li>Инфраструктура Точек Кипения – онлайн инструменты работы с сообществами, студентами,
+                преподавателями, быстрые коммуникации и прочее</li>
+            <li>Транслирование опыта – сотрудничество с другими университетами по передаче опыта</li>
+            <li>Представление университета в повестке РФ</li>
+
+        </ul>
+
     </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- <div class="card1"></div>
-    <div class="card bg-dark mb-3 " style="max-width: 540px;">
-        <div class="row no-gutters">
-            <div class="col-md-4">
-                <img src="img/card1.jpg" class=" card-img" alt="...">
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h5 class="card-title">Цели</h5>
-                    <p class="card-text">Тестирование способов достижения стратегических задач университета,
-                        в том числе поиск новых: быстро, удобно, комплексно.</p>
-
-                </div>
-            </div>
-        </div>
-
-
-        <div class="card bg-dark mb-3" style="max-width: 540px;">
-            <div class="row no-gutters">
-                <div class="col-md-4">
-                    <img src="img/card2.jpg" class="card-img" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">Задачи</h5>
-                        <p class="card-text">Связать 9 стратегических целей и 20 стратегических проектов с бизнес-
-                            интересами внешних и внутренних сообществ университета, внешняя (относительно
-                            разработчиков)
-                            обратная связь по проектам
-                            Стратегическая цель – формирование культуры ответственности за выбор
-                            личной образовательной и карьерной траектории</p>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-
-
-
 </section>
-
-<!--   <section id="role">
-
-            <div class="role1">
-                <h1>Возможности для сотрудников</h1>
-
-                <ul>
-                    <li>Экспертность – подтверждение или приобретение статуса эксперта, вовлечение сотрудников в новые
-                        экспертные области, направления</li>
-                    <li>Привлечение партнеров – статус университета с ТК подтверждает включение в экосистему АСИ и НТИ,
-                        новые партнеры, усиление связей с партнерами</li>
-                    <li>Новые проекты – идеи и запросы внешних партнеров, а также инициативные проекты от студентов и
-                        сотрудников</li>
-
-                </ul>
-
-            </div>
-
-            <div class="pic_svg">
-                <img class="animated1" src="img/pic.svg" alt="">
-            </div>
-
-            <div class="role2">
-                <h1>Возможности для университета</h1>
-
-                <ul>
-                    <li>Возможность участия в конкурсах по линии Цифровой экономики</li>
-                    <li>Сетевые мероприятия сети Точек Кипения (PR, привлечение экспертов, проектов)</li>
-                    <li>Инфраструктура Точек Кипения – онлайн инструменты работы с сообществами, студентами,
-                        преподавателями, быстрые коммуникации и прочее</li>
-                    <li>Транслирование опыта – сотрудничество с другими университетами по передаче опыта</li>
-                    <li>Представление университета в повестке РФ</li>
-
-                </ul>
-
-            </div>
-
-
-        </section> -->
 </main>
 <footer>
     <p> ФИО: АЛЕКСЕЕВ ДАНИИЛ ВЛАДИСЛАВОВИЧ <br>
