--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     <section class="nav-bar">
         <div class="nav-container">
             <div class="brand">
-                <a href="#"><img src="img/icon.png"></a>
+                <a href="#"><img src="img/icon.png" alt=""></a>
             </div>
             <nav>
-                <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+                <div class="nav-mobile"><a id="nav-toggle" href="#"><span></span></a></div>
                 <ul class="nav-list">
                     <li>
                         <a href="#">ТОЧКА КИПЕНИЯ</a>
@@ -48,7 +48,7 @@
                         <a href="#">Направления</a>
                         <ul class="nav-dropdown">
                             <li>
-                                <a href="#nti.html">Движение НТИ</a>
+                                <a href="nti.html">Движение НТИ</a>
                             </li>
                             <li>
                                 <a href="#">Сквозные технологии</a>
@@ -57,7 +57,7 @@
                                 <a href="#">Кружковое Движение</a>
                             </li>
                             <li>
-                                <a href="#university35.html">Университет 2035</a>
+                                <a href="university35.html">Университет 2035</a>
                             </li>
                             <li>
                                 <a href="#">Точка роста</a>
@@ -71,13 +71,13 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#">Наши цели</a>
+                        <a href="#aims">Наши цели</a>
                     </li>
                     <li>
-                        <a href="#">Наши миссия</a>
+                        <a href="#mission">Наши миссия</a>
                     </li>
                     <li>
-                        <a href="#">Возможности</a>
+                        <a href="role">Возможности</a>
                     </li>
                     <li>
                         <a href="#">Контакты</a>
@@ -89,212 +89,212 @@
 
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="script.js"></script>
-</body>
 
 
 
 
 
-<section id="welcome">
 
-    <div class="welcome__title">
-        <h1> РАБОТА УНИВЕРСИТЕТСКОЙ <br>"ТОЧКИ КИПЕНИЯ"</h1>
-        <h2>ОТ ЗАПУСКА К ДЕЯТЕЛЬНОСТИ</h2>
-    </div>
+    <section id="welcome">
 
-    <div class="welcome__button">
+        <div class="welcome__title">
+            <h1> РАБОТА УНИВЕРСИТЕТСКОЙ <br>"ТОЧКИ КИПЕНИЯ"</h1>
+            <h2>ОТ ЗАПУСКА К ДЕЯТЕЛЬНОСТИ</h2>
+        </div>
+
+        <div class="welcome__button">
 
 
 
-        <div class="modal fade" id="darkModalForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-            aria-hidden="true">
-            <div class="modal-dialog form-dark" role="document">
-                <!--Content-->
-                <div class="modal-content card card-image" style="background-color: black;">
-                    <div class="text-white rgba-stylish-strong py-5 px-5 z-depth-4">
-                        <!--Header-->
-                        <div class="modal-header text-center pb-4">
-                            <h3 class="modal-title w-100 white-text font-weight-bold" id="myModalLabel">
-                                <strong>ЗАЯВКА</strong> <a class="green-text font-weight-bold"></a>
-                            </h3>
-                            <button type="button" class="close white-text" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <!--Body-->
-                        <div class="modal-body">
+            <div class="modal fade" id="darkModalForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog form-dark" role="document">
+                    <!--Content-->
+                    <div class="modal-content card card-image" style="background-color: black;">
+                        <div class="text-white rgba-stylish-strong py-5 px-5 z-depth-4">
+                            <!--Header-->
+                            <div class="modal-header text-center pb-4">
+                                <h3 class="modal-title w-100 white-text font-weight-bold" id="myModalLabel">
+                                    <strong>ЗАЯВКА</strong> <a class="green-text font-weight-bold"></a>
+                                </h3>
+                                <button type="button" class="close white-text" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
                             <!--Body-->
-                            <div class="md-form mb-5">
-                                <input type="email" id="Form-email5" class="form-control validate white-text">
-                                <label data-error="wrong" data-success="right" for="Form-email5">ВАША ПОЧТА</label>
-                            </div>
-
-                            <div class="md-form pb-3">
-                                <input type="password" id="Form-pass5" class="form-control validate white-text">
-                                <label data-error="wrong" data-success="right" for="Form-pass5">ВАШЕ ИМЯ</label>
-                                <div class="form-group mt-4">
-                                    <input class="form-check-input" type="checkbox" id="checkbox624">
-                                    <label for="checkbox624" class="white-text form-check-label">Получать
-                                        уведолмения<a href="#" class="green-text font-weight-bold">
-                                            принять соглашение</a></label>
+                            <div class="modal-body">
+                                <!--Body-->
+                                <div class="md-form mb-5">
+                                    <input type="email" id="Form-email5" class="form-control validate white-text">
+                                    <label data-error="wrong" data-success="right" for="Form-email5">ВАША ПОЧТА</label>
                                 </div>
-                            </div>
 
-                            <!--Grid row-->
-                            <div class="row d-flex align-items-center mb-4">
-
-                                <!--Grid column-->
-                                <div class="text-center mb-3 col-md-12">
-                                    <button type="button"
-                                        class="btn btn-success btn-block btn-rounded z-depth-1">ПРИНЯТЬ
-                                        УЧАСТИЕ</button>
+                                <div class="md-form pb-3">
+                                    <input type="password" id="Form-pass5" class="form-control validate white-text">
+                                    <label data-error="wrong" data-success="right" for="Form-pass5">ВАШЕ ИМЯ</label>
+                                    <div class="form-group mt-4">
+                                        <input class="form-check-input" type="checkbox" id="checkbox624">
+                                        <label for="checkbox624" class="white-text form-check-label">Получать
+                                            уведолмения<a href="#" class="green-text font-weight-bold">
+                                                принять соглашение</a></label>
+                                    </div>
                                 </div>
-                                <!--Grid column-->
 
-                            </div>
-                            <!--Grid row-->
+                                <!--Grid row-->
+                                <div class="row d-flex align-items-center mb-4">
 
-                            <!--Grid row-->
-                            <div class="row">
+                                    <!--Grid column-->
+                                    <div class="text-center mb-3 col-md-12">
+                                        <button type="button"
+                                            class="btn btn-success btn-block btn-rounded z-depth-1">ПРИНЯТЬ
+                                            УЧАСТИЕ</button>
+                                    </div>
+                                    <!--Grid column-->
 
-                                <!--Grid column-->
-                                <div class="col-md-12">
-                                    <p class="font-small white-text d-flex justify-content-end"> <a href="#"
-                                            class="green-text ml-1 font-weight-bold">
-                                        </a></p>
                                 </div>
-                                <!--Grid column-->
+                                <!--Grid row-->
+
+                                <!--Grid row-->
+                                <div class="row">
+
+                                    <!--Grid column-->
+                                    <div class="col-md-12">
+                                        <p class="font-small white-text d-flex justify-content-end"> <a href="#"
+                                                class="green-text ml-1 font-weight-bold">
+                                            </a></p>
+                                    </div>
+                                    <!--Grid column-->
+
+                                </div>
+                                <!--Grid row-->
 
                             </div>
-                            <!--Grid row-->
-
                         </div>
                     </div>
+                    <!--/.Content-->
                 </div>
-                <!--/.Content-->
+            </div>
+            <!-- Modal -->
+
+            <div class="text-center">
+                <a href="" class="btn btn-info btn-rounded" data-toggle="modal" data-target="#darkModalForm">Принять
+                    участие в "Точке Кипения"</a>
             </div>
         </div>
-        <!-- Modal -->
+    </section>
 
-        <div class="text-center">
-            <a href="" class="btn btn-info btn-rounded" data-toggle="modal" data-target="#darkModalForm">Принять
-                участие в "Точке Кипения"</a>
-        </div>
-    </div>
-</section>
-
-<section id="mission">
-    <div class="items">
-        <h1>Наша миссия</h1>
-        <p>100% студентов, преподавателей, <br> администрации вовлечены в повестку
-            <br> стратегического развития
-            университета</p>
-    </div>
-
-
-</section>
-
-<section id="aims">
-    <div class="items2">
-
-        <h1>Цели,Задачи,Роль </h1>
-    </div>
-
-    <div class="cards-wrapper">
-
-        <div class="card-grid-space">
-            <a class="card" href="#"
-                style="--bg-img: url(https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/html-syntax/cover.jpg)">
-                <div>
-                    <h1>Цели</h1>
-                    <p>Тестирование способов достижения стратегических задач университета,
-                        в том числе поиск новых: быстро, удобно, комплексно.</p>
-                </div>
-            </a>
+    <section id="mission">
+        <div class="items">
+            <h1>Наша миссия</h1>
+            <p>100% студентов, преподавателей, <br> администрации вовлечены в повестку
+                <br> стратегического развития
+                университета</p>
         </div>
 
-        <div class="card-grid-space">
-            <a class="card" href="#"
-                style="--bg-img: url('https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/basic-types-of-html-tags/cover.jpg')">
-                <div>
-                    <h1>Стратегическая цель</h1>
-                    <p>Формирование культуры ответственности за выбор
-                        личной образовательной и карьерной траектории</p>
-                </div>
-            </a>
+
+    </section>
+
+    <section id="aims">
+        <div class="items2">
+
+            <h1>Цели,Задачи,Роль </h1>
         </div>
 
-        <div class="card-grid-space">
-            <a class="card" href="#" style="--bg-img: url('../img/card1.jpg');">
-                <div>
-                    <h1>Задачи</h1>
-                    <p>Learn how to use links and images along with file paths…</p>
-                </div>
-            </a>
+        <div class="cards-wrapper">
+
+            <div class="card-grid-space">
+                <a class="card" href="#"
+                    style="--bg-img: url(https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/html-syntax/cover.jpg)">
+                    <div>
+                        <h1>Цели</h1>
+                        <p>Тестирование способов достижения стратегических задач университета,
+                            в том числе поиск новых: быстро, удобно, комплексно.</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="card-grid-space">
+                <a class="card" href="#"
+                    style="--bg-img: url('https://images1-focus-opensocial.googleusercontent.com/gadgets/proxy?container=focus&resize_w=1500&url=https://codetheweb.blog/assets/img/posts/basic-types-of-html-tags/cover.jpg')">
+                    <div>
+                        <h1>Стратегическая цель</h1>
+                        <p>Формирование культуры ответственности за выбор
+                            личной образовательной и карьерной траектории</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="card-grid-space">
+                <a class="card" href="#" style="--bg-img: url('../img/card1.jpg');">
+                    <div>
+                        <h1>Задачи</h1>
+                        <p>Learn how to use links and images along with file paths…</p>
+                    </div>
+                </a>
+            </div>
+
+            <div class="card-grid-space">
+                <a class="card" href="#" style="--bg-img: url('../img/card2.jpg')">
+                    <div>
+                        <h1>Роль</h1>
+                        <p>Роль в вузе (функционал в университете будущего) – площадка проработки стратегических
+                            проектов
+                            университета (коммуникация студентов, преподавателей, исследователей, администрации,
+                            бизнес-сообществ)</p>
+                    </div>
+                </a>
+            </div>
+
+        </div>
+    </section>
+
+    <section id="role">
+
+        <div class="role1">
+            <h1>Возможности для сотрудников</h1>
+
+            <ul>
+                <li>Экспертность – подтверждение или приобретение статуса эксперта, вовлечение сотрудников в новые
+                    экспертные области, направления</li>
+                <li>Привлечение партнеров – статус университета с ТК подтверждает включение в экосистему АСИ и НТИ,
+                    новые партнеры, усиление связей с партнерами</li>
+                <li>Новые проекты – идеи и запросы внешних партнеров, а также инициативные проекты от студентов и
+                    сотрудников</li>
+
+            </ul>
+
         </div>
 
-        <div class="card-grid-space">
-            <a class="card" href="#" style="--bg-img: url('../img/card2.jpg')">
-                <div>
-                    <h1>Роль</h1>
-                    <p>Роль в вузе (функционал в университете будущего) – площадка проработки стратегических проектов
-                        университета (коммуникация студентов, преподавателей, исследователей, администрации,
-                        бизнес-сообществ)</p>
-                </div>
-            </a>
+        <div class="pic_svg">
+            <img class="animated1" src="img/pic.svg" alt="">
         </div>
 
-    </div>
-</section>
+        <div class="role2">
+            <h1>Возможности для университета</h1>
 
-<section id="role">
+            <ul>
+                <li>Возможность участия в конкурсах по линии Цифровой экономики</li>
+                <li>Сетевые мероприятия сети Точек Кипения (PR, привлечение экспертов, проектов)</li>
+                <li>Инфраструктура Точек Кипения – онлайн инструменты работы с сообществами, студентами,
+                    преподавателями, быстрые коммуникации и прочее</li>
+                <li>Транслирование опыта – сотрудничество с другими университетами по передаче опыта</li>
+                <li>Представление университета в повестке РФ</li>
 
-    <div class="role1">
-        <h1>Возможности для сотрудников</h1>
+            </ul>
 
-        <ul>
-            <li>Экспертность – подтверждение или приобретение статуса эксперта, вовлечение сотрудников в новые
-                экспертные области, направления</li>
-            <li>Привлечение партнеров – статус университета с ТК подтверждает включение в экосистему АСИ и НТИ,
-                новые партнеры, усиление связей с партнерами</li>
-            <li>Новые проекты – идеи и запросы внешних партнеров, а также инициативные проекты от студентов и
-                сотрудников</li>
-
-        </ul>
-
-    </div>
-
-    <div class="pic_svg">
-        <img class="animated1" src="img/pic.svg" alt="">
-    </div>
-
-    <div class="role2">
-        <h1>Возможности для университета</h1>
-
-        <ul>
-            <li>Возможность участия в конкурсах по линии Цифровой экономики</li>
-            <li>Сетевые мероприятия сети Точек Кипения (PR, привлечение экспертов, проектов)</li>
-            <li>Инфраструктура Точек Кипения – онлайн инструменты работы с сообществами, студентами,
-                преподавателями, быстрые коммуникации и прочее</li>
-            <li>Транслирование опыта – сотрудничество с другими университетами по передаче опыта</li>
-            <li>Представление университета в повестке РФ</li>
-
-        </ul>
-
-    </div>
+        </div>
 
 
-</section>
-</main>
-<footer>
-    <p> ФИО: АЛЕКСЕЕВ ДАНИИЛ ВЛАДИСЛАВОВИЧ <br>
-        ГРУППА: 191-322<br>
-        Дата выполнения: 01.06.2020
+    </section>
+    <footer>
+        <p> ФИО: АЛЕКСЕЕВ ДАНИИЛ ВЛАДИСЛАВОВИЧ <br>
+            ГРУППА: 191-322<br>
+            Дата выполнения: 01.06.2020
 
 
-    </p>
+        </p>
 
-</footer>
+    </footer>
 </body>
 
 </html>
